--- a/client/src/main.css
+++ b/client/src/main.css
@@ -24,7 +24,7 @@ button {
           box-shadow: 1px 1px 15px 1px #AFAFAF;
   background-color: #0095FF;
   color: #E1E1E1;
-  border-radius: 3px;
+  border-radius: 1.2rem;
   border: none;
   height: 2.5rem;
   font-size: 1.3rem;
@@ -45,12 +45,25 @@ button:active {
   border: 0 inset;
 }
 
-input {
-  border-color: #AFAFAF;
-  border-radius: 3px;
+input, textarea {
+  border-color: rgba(175, 175, 175, 0.2);
+  padding-left: .4rem;
+  border-radius: 20px;
   height: 2.5rem;
   font-size: 1.1rem;
   margin-top: 1rem;
+}
+
+input:active, textarea:active {
+  border: #0095FF 1px solid;
+}
+
+input:focus, textarea:focus {
+  border: #0095FF 1px solid;
+}
+
+textarea {
+  height: 8rem;
 }
 
 a {
@@ -59,8 +72,21 @@ a {
 }
 
 .header {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  background-color: #0095FF;
+  width: 100%;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__logo {
@@ -75,29 +101,22 @@ a {
 }
 
 .header__btn {
+  padding: 0 1rem;
+  margin: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
   color: #0095FF;
   background-color: #FFFFFF;
 }
 
-.header__wrapper {
+.header__search--form {
+  width: 60%;
   margin: 0;
-  padding: 0;
-  background-color: #0065AD;
+}
+
+.header__search--input {
   width: 100%;
-  min-height: 4rem;
-  color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  border: 1px yellow solid;
+  margin: 0;
 }
 
 .header__inner-wrapper {
@@ -111,6 +130,75 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.header__inner-wrapper--col-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin: auto;
+}
+
+.header__inner-wrapper--col-2 {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.header__inner-wrapper--col-outer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__inner-wrapper--col-4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: .2rem;
+  width: 100%;
+}
+
+.header__text {
+  color: white;
+  padding: 0;
+  margin: auto;
+  margin-right: 1rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  float: right;
+}
+
+.header__avatar {
+  border-radius: 35px;
+}
+
+.header__avatar--wrapper {
+  margin: auto 0;
+}
+
+.app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .side-bar {
@@ -193,7 +281,7 @@ a {
 }
 
 .user-details__list--item {
-  border-radius: 3px;
+  border-radius: 1.2rem;
   -webkit-box-shadow: 1px 1px 10px 1px lightblue;
           box-shadow: 1px 1px 10px 1px lightblue;
   padding: 0.5rem;
@@ -228,10 +316,80 @@ a {
 @media screen and (min-width: 1200px) {
   .user-details__profile {
     padding: 2rem;
-    border-radius: 3px;
+    border-radius: 1.2rem;
     -webkit-box-shadow: 1px 1px 5px 1px #AFAFAF;
             box-shadow: 1px 1px 5px 1px #AFAFAF;
     max-width: 80vw;
   }
+}
+
+.modal__window {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  z-index: 2;
+  left: 0;
+  top: 224px;
+}
+
+.modal__wrapper {
+  position: absolute;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  z-index: 3;
+  left: 0;
+  top: 20px;
+  background-color: #FAFAFA;
+}
+
+.modal__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.modal__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-column-count: 4;
+          column-count: 4;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border: #0095FF solid 1px;
+  padding: 1rem;
+}
+
+.modal__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: .5rem;
+          column-gap: .5rem;
+  border: green solid 1px;
+  padding: 1rem;
+  margin: 1rem 0;
 }
 /*# sourceMappingURL=main.css.map */
