--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -16,19 +16,19 @@ $mercury: #E1E1E1; //Mercury
 $gutter_width_mobile: 1rem;
 $gutter_width: 1.5rem;
 $margin_top_std: 1rem;
-$border_radius_std: 3px;
+$border_radius_std: 1.2rem;
 
 * {
-  //border: .5px solid  green;
-  box-sizing: border-box;
-  color: $paragraph_text;
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif ;
+  //border: .5px solid  white;
+    box-sizing: border-box;
+    color: $paragraph_text;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif ;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  min-width: 320px;
+    margin: 0;
+    padding: 0;
+    min-width: 320px;
 }
 label {
     display: block;
@@ -59,12 +59,22 @@ button {
     }
 }
 
-input {
-    border-color: $silver;
-    border-radius: 3px;
+input, textarea {
+    border-color: rgba($silver, 0.2);
+    padding-left: .4rem;
+    border-radius: 20px;
     height: 2.5rem;;
     font-size: 1.1rem;
     margin-top: $margin_top_std;
+    &:active {
+        border: #0095FF 1px solid;
+    }
+    &:focus {
+                border: #0095FF 1px solid;
+    }
+}
+textarea {
+    height: 8rem;
 }
 
 a {
@@ -73,8 +83,15 @@ a {
 }
 
 .header {
-margin: 0;
-    padding: 0;
+        margin: 0 auto;
+        padding: 0;
+        background-color: $primary_CTA;
+        width: 100%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
     &__logo {
         max-height: 90px;
         margin: 0 auto;
@@ -83,28 +100,67 @@ margin: 0;
         }
     }
     &__btn {
+        padding: 0 1rem;
+        margin: 0;
         box-shadow: none;
         color: $primary_CTA;
         background-color: $white;
     }
+    &__search {
+        &--form {
+            width: 60%;
+            margin: 0;
 
-    &__wrapper {
-        margin: 0;
-        padding: 0;
-        background-color: $primary_CTA_hover;
-        width: 100%;
-        min-height: 4rem;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        border: 1px yellow solid;
+        }
+        &--input {
+            width:100%;
+            margin: 0;
+        }
     }
+  
 
     &__inner-wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        width: fit-content;
+        &--col-1 {
+            display: flex;
+            width: 100%;
+            margin: auto;
+        }
+        &--col-2 {
+            width: 90%;
+            display: flex;
+            //width: fit-content;
+            justify-content: flex-end;
+        }
+        &--col-outer {
+            display: flex;
+            justify-content: space-between;
+        }
+        &--col-4 {
+            display: flex;
+            justify-content: space-between;
+            margin: .2rem;
+            width: 100%;
+        }
+    }
+    &__text {
+        color: white;
+        padding: 0;
+        margin: auto;
+        margin-right: 1rem;
+        align-self: flex-end;
+        float: right;
+        
+    }
+    &__avatar {
+        border-radius: 35px;
+        &--wrapper {
+            margin: auto 0;
+
+        }
     }
 
 }
@@ -208,5 +264,49 @@ margin: 0;
             box-shadow: 1px 1px 5px 1px $text_label_style;
             max-width: 80vw;
         }
+    }
+}
+
+.modal {
+    &__window {
+    background-color: rgba(black, 0.6);
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    z-index: 2;
+    left: 0;
+    top: 224px;
+    }
+    &__wrapper {
+        position: absolute;
+        width: fit-content;
+        height: fit-content;
+        z-index: 3;
+        left: 0;
+        top: 20px;
+        background-color: $text_field_background_fill;
+    }
+    &__content {
+        display: flex;
+        width: fit-content;
+        height: fit-content;
+    }
+    &__list {
+        display: flex;
+        width: fit-content;
+        height: fit-content;
+        column-count: 4;
+        flex-wrap: wrap;
+        column-gap: 1rem;
+        justify-content: flex-start;
+        border: #0095FF solid 1px;
+        padding: 1rem;
+    }
+    &__item {
+        display: flex;
+        column-gap: .5rem;
+        border: green solid 1px;
+        padding: 1rem;
+        margin: 1rem 0 ;
     }
 }
