--- a/client/src/main.css
+++ b/client/src/main.css
@@ -76,7 +76,7 @@ a {
   padding: 0;
   background-color: #0095FF;
   width: 100%;
-  color: white;
+  color: #FFFFFF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -103,6 +103,7 @@ a {
 .header__btn {
   padding: 0 1rem;
   margin: 0;
+  margin-right: 1rem;
   -webkit-box-shadow: none;
           box-shadow: none;
   color: #0095FF;
@@ -111,6 +112,7 @@ a {
 
 .header__search--form {
   width: 60%;
+  max-width: 20rem;
   margin: 0;
 }
 
@@ -135,25 +137,32 @@ a {
   width: fit-content;
 }
 
-.header__inner-wrapper--col-1 {
+.header__inner-wrapper--col-container-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   margin: auto;
 }
 
-.header__inner-wrapper--col-2 {
+.header__inner-wrapper--col-1 {
   width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.header__inner-wrapper--col-outer {
+.header__inner-wrapper--col-container-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -162,7 +171,7 @@ a {
           justify-content: space-between;
 }
 
-.header__inner-wrapper--col-4 {
+.header__inner-wrapper--col-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -174,7 +183,7 @@ a {
 }
 
 .header__text {
-  color: white;
+  color: #FFFFFF;
   padding: 0;
   margin: auto;
   margin-right: 1rem;
@@ -184,11 +193,36 @@ a {
 }
 
 .header__avatar {
-  border-radius: 35px;
+  border-radius: 5.8rem;
 }
 
 .header__avatar--wrapper {
   margin: auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .header__inner-wrapper {
+    margin: 0 15%;
+  }
+}
+
+@media (min-width: 1080px) {
+  .header {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+  .header__inner-wrapper {
+    margin: 0 20rem;
+  }
 }
 
 .app {
@@ -235,7 +269,7 @@ a {
           flex-direction: column;
 }
 
-.form-group {
+.form__group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -253,10 +287,39 @@ a {
 
 .form__input {
   margin: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.form__input:focus {
+  outline: none;
+  border: 2px #0095FF solid;
+}
+
+@media (min-width: 768px) {
+  .form__wrapper {
+    margin: 0 15%;
+  }
+}
+
+@media (min-width: 1080px) {
+  .form__wrapper {
+    margin: 0 20rem;
+  }
 }
 
 .user-details {
   margin: auto;
+}
+
+.user-details__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .user-details__wrapper {
@@ -264,28 +327,56 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: auto;
 }
 
 .user-details__title {
-  margin: auto;
+  margin: auto auto 0 1rem;
 }
 
 .user-details__profile {
-  margin: 3rem auto;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: .5rem 0;
+  padding-right: 1rem;
 }
 
 .user-details__list {
+  margin-top: 0;
   width: 100%;
   padding: 0 2rem;
 }
 
 .user-details__list--item {
   border-radius: 1.2rem;
-  -webkit-box-shadow: 1px 1px 10px 1px lightblue;
-          box-shadow: 1px 1px 10px 1px lightblue;
-  padding: 0.5rem;
-  margin-top: 1rem;
+  -webkit-box-shadow: 1px 1px 10px 1px rgba(50, 50, 50, 0.2);
+          box-shadow: 1px 1px 10px 1px rgba(50, 50, 50, 0.2);
+  padding: .5rem;
+  margin-top: .5rem;
+}
+
+.user-details__list-title {
+  margin-top: auto;
+  font-size: 1.2rem;
+  padding: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.user-details__middle-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 2rem;
 }
 
 .user-details__img {
@@ -296,30 +387,47 @@ a {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 1.5rem;
+  margin: 0;
 }
 
 .user-details__label {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: bold;
 }
 
 .user-details__field {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  margin: .2rem;
 }
 
 .user-details__edit-btn {
-  width: 100%;
-  height: 3rem;
+  margin: 0;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
-@media screen and (min-width: 1200px) {
-  .user-details__profile {
-    padding: 2rem;
-    border-radius: 1.2rem;
-    -webkit-box-shadow: 1px 1px 5px 1px #AFAFAF;
-            box-shadow: 1px 1px 5px 1px #AFAFAF;
-    max-width: 80vw;
+.user-details__edit--icon {
+  height: 45px;
+  width: 45px;
+}
+
+@media (min-width: 768px) {
+  .user-details {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+}
+
+@media (min-width: 1080px) {
+  .user-details {
+    margin-left: 10rem;
+    margin-right: 10rem;
   }
 }
 
@@ -388,7 +496,7 @@ a {
   display: flex;
   -webkit-column-gap: .5rem;
           column-gap: .5rem;
-  border: green solid 1px;
+  border: #0095FF solid 1px;
   padding: 1rem;
   margin: 1rem 0;
 }
