--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,17 +1,17 @@
 @import "./style/partials/variables";
 @import "./style/partials/mixins";
 
-$navigation_background_fill: #323232; // Black
-$primary_CTA: #0095FF; // blue
-$text_link: #0095FF; // blue
-$primary_CTA_hover: #0065AD; 
-$paragraph_text: #323232; // Black
-$silver: #AFAFAF; // Silver
-$text_field_border: #E1E1E1; // Ablaster
-$text_field_background_fill: #FAFAFA; //Mercury
-$text_color:  #FAFAFA;  // Ablaster
-$white: #FFFFFF; // White
-$mercury: #E1E1E1; //Mercury
+// $navigation_background_fill: #323232; // Black
+// $primary_CTA: #0095FF; // blue
+// $text_link: #0095FF; // blue
+// $primary_CTA_hover: #0065AD; 
+// $paragraph_text: #323232; // Black
+// $silver: #AFAFAF; // Silver
+// $text_field_border: #E1E1E1; // Ablaster
+// $text_field_background_fill: #FAFAFA; //Mercury
+// $text_color:  #FAFAFA;  // Ablaster
+// $white: #FFFFFF; // White
+// $mercury: #E1E1E1; //Mercury
 
 $gutter_width_mobile: 1rem;
 $gutter_width: 1.5rem;
@@ -19,7 +19,7 @@ $margin_top_std: 1rem;
 $border_radius_std: 1.2rem;
 
 * {
-  //border: .5px solid  white;
+    //border: .5px solid  green;
     box-sizing: border-box;
     color: $paragraph_text;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif ;
@@ -67,10 +67,10 @@ input, textarea {
     font-size: 1.1rem;
     margin-top: $margin_top_std;
     &:active {
-        border: #0095FF 1px solid;
+        border: $primary_CTA 1px solid;
     }
     &:focus {
-                border: #0095FF 1px solid;
+        border: $primary_CTA 1px solid;
     }
 }
 textarea {
@@ -87,7 +87,7 @@ a {
         padding: 0;
         background-color: $primary_CTA;
         width: 100%;
-        color: white;
+        color: $white;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -102,6 +102,7 @@ a {
     &__btn {
         padding: 0 1rem;
         margin: 0;
+        margin-right: 1rem;
         box-shadow: none;
         color: $primary_CTA;
         background-color: $white;
@@ -109,6 +110,7 @@ a {
     &__search {
         &--form {
             width: 60%;
+            max-width: 20rem;
             margin: 0;
 
         }
@@ -117,29 +119,30 @@ a {
             margin: 0;
         }
     }
-  
 
     &__inner-wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: fit-content;
-        &--col-1 {
+        &--col-container-1 {
             display: flex;
+            justify-content: space-between;
             width: 100%;
             margin: auto;
         }
-        &--col-2 {
+        &--col-1 {
             width: 90%;
             display: flex;
-            //width: fit-content;
-            justify-content: flex-end;
+            flex-direction: column-reverse;
+            width: fit-content;
+            
         }
-        &--col-outer {
+        &--col-container-2 {
             display: flex;
             justify-content: space-between;
         }
-        &--col-4 {
+        &--col-2 {
             display: flex;
             justify-content: space-between;
             margin: .2rem;
@@ -147,7 +150,7 @@ a {
         }
     }
     &__text {
-        color: white;
+        color: $white;
         padding: 0;
         margin: auto;
         margin-right: 1rem;
@@ -156,11 +159,27 @@ a {
         
     }
     &__avatar {
-        border-radius: 35px;
+        border-radius: 5.8rem;
         &--wrapper {
             margin: auto 0;
-
+            display: flex;
+            justify-content: space-around;
         }
+    }
+
+    @include tablet {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        &__inner-wrapper {
+            margin: 0 15%;
+        }
+    }
+    @include desktop {
+        padding-left: 10rem;
+        padding-right: 10rem;
+        &__inner-wrapper {
+            margin: 0 20rem;
+        }        
     }
 
 }
@@ -195,7 +214,8 @@ a {
 
 .form {
 
-    &-group {
+
+    &__group {
         display: flex;
         flex-direction: column;
         margin: 1rem 0.5rem;
@@ -207,62 +227,109 @@ a {
     }
     &__input {
         margin: 0;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        &:focus {
+            outline: none;
+            border: 2px $primary_CTA solid;
+
+        }
+    }
+    @include tablet {
+    &__wrapper {
+        margin: 0 15%;
+        }
+    }
+    @include desktop {
+        &__wrapper {
+            margin: 0 20rem;
+        }
     }
 }
 
 .user-details {
     margin: auto;
+
+    &__header {
+        display: flex;
+        justify-items:flex-end;
+        justify-content: space-between;
+
+    }
     &__wrapper {
         width: 90%;
         display: flex;
-        margin: auto;
         
     }
     &__title {
-        margin: auto;
+        margin: auto auto 0 1rem;
     }
     &__profile {
-        margin: 3rem auto;
+        width: 100%;
+        display: flex;
+        justify-items: flex-end;
+        justify-content: space-between;
+        margin: .5rem 0;
+        padding-right: 1rem;
     }
     &__list {
+        margin-top: 0;
         width: 100%;
         padding: 0 2rem;
         &--item {
             border-radius: $border_radius_std;
-            box-shadow: 1px 1px 10px 1px lightblue;
-            padding: 0.5rem;
-            margin-top: 1rem;
+            box-shadow: 1px 1px 10px 1px rgba($paragraph_text, 0.2);
+            padding: .5rem;
+            margin-top: .5rem;
         }
+        &-title {
+            margin-top: auto;
+            font-size: 1.2rem;
+            padding: 0;
+            width: fit-content;
+        }
+    }
+    &__middle-section {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
     }
     &__img {
         border-radius: 1rem;
         &-wrapper {
             width: fit-content;
-            margin: 1.5rem;
+            margin: 0;
         }
     }
     &__label{
-        font-size: 1.5rem;
+        font-size: 1.1rem;
         font-weight: bold;
     }
     &__field {
-        font-size: 1.2rem;
+        font-size: 1rem;
+        margin: .2rem;
     }
     &__edit-btn {
-        width: 100%;
-        height: 3rem;
+        margin: 0;
+        object-fit:scale-down;
+        width: fit-content;
+        height: fit-content;
+    }
+    &__edit--icon {
+        height: 45px;
+        width: 45px;
+        
     }
 
     @include tablet{ 
-
+        margin-left: 5rem;
+        margin-right: 5rem;
     }
 
     @include desktop {
+        margin-left: 10rem;
+        margin-right: 10rem;
         &__profile {
-            padding: 2rem;;
-            border-radius: $border_radius_std;
-            box-shadow: 1px 1px 5px 1px $text_label_style;
-            max-width: 80vw;
         }
     }
 }
@@ -299,13 +366,13 @@ a {
         flex-wrap: wrap;
         column-gap: 1rem;
         justify-content: flex-start;
-        border: #0095FF solid 1px;
+        border: $primary_CTA solid 1px;
         padding: 1rem;
     }
     &__item {
         display: flex;
         column-gap: .5rem;
-        border: green solid 1px;
+        border: $primary_CTA solid 1px;
         padding: 1rem;
         margin: 1rem 0 ;
     }
