--- a/client/src/style/partials/_variables.scss
+++ b/client/src/style/partials/_variables.scss
@@ -1,18 +1,32 @@
 $tablet_min_width: 768px;
-$desktop_min_width: 1200px;
+$desktop_min_width: 1080px;
 
 
 $navigation_background_fill: #323232; // Black
 $primary_CTA: #0095FF; // blue
-$text_link: #0095FF; // blue
 $primary_CTA_hover: #0065AD; 
 $paragraph_text: #323232; // Black
 $text_label_style: #AFAFAF; // Silver
+$silver: #AFAFAF; // Silver
 $text_field_border: #E1E1E1; // Ablaster
 $text_field_background_fill: #FAFAFA; //Mercury
 $text_color:  #FAFAFA;  // Ablaster
-$background: #FFFFFF; // White
+$white: #FFFFFF; // White
 $mercury: #E1E1E1; //Mercury
 
 $gutter_width_mobile: 1rem;
 $gutter_width: 1.5rem;
+
+
+
+@mixin tablet {
+    @media (min-width: $tablet_min_width) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: $desktop_min_width) {
+        @content;
+    }
+}
