--- a/client/src/main.css
+++ b/client/src/main.css
@@ -20,6 +20,7 @@ ul {
 }
 
 button {
+  min-width: 5rem;
   -webkit-box-shadow: 1px 1px 15px 1px #AFAFAF;
           box-shadow: 1px 1px 15px 1px #AFAFAF;
   background-color: #0095FF;
@@ -46,6 +47,7 @@ button:active {
 }
 
 input, textarea {
+  outline: none;
   border-color: rgba(175, 175, 175, 0.2);
   padding-left: .4rem;
   border-radius: 20px;
@@ -387,7 +389,20 @@ a {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 0;
+}
+
+.user-details__btn {
+  border-radius: 1rem;
+  font-size: .9rem;
+  margin: auto .5rem 0 auto;
+  margin-bottom: 0;
+}
+
+.user-details__btn-wrapper {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto .5rem 0;
 }
 
 .user-details__label {
@@ -435,7 +450,7 @@ a {
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
   width: 100vw;
-  height: 100%;
+  height: 600%;
   z-index: 2;
   left: 0;
   top: 139px;
@@ -519,5 +534,68 @@ a {
 .icon:hover {
   -webkit-box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
           box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
+}
+
+#avatar-image-id {
+  width: 90px;
+  height: 90px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.user-list {
+  margin: auto 3%;
+  padding: 1rem .9rem;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
+          box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
+}
+
+.user-list__card {
+  -webkit-box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
+          box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.3);
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-radius: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.user-list__card--btn {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 1.1rem;
+  height: 1.1rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.user-list__card--row-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: .3rem;
+}
+
+.user-list__card--row-1-a {
+  margin-top: .2rem;
+  margin-right: 2.5rem;
+  font-size: 1.5rem;
+  text-align: right;
 }
 /*# sourceMappingURL=main.css.map */
