--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -39,6 +39,7 @@ ul {
 }
 
 button {
+    min-width: 5rem;
     box-shadow: 1px 1px 15px 1px $text_label_style;
     background-color: $primary_CTA;
     color: $mercury;
@@ -60,6 +61,7 @@ button {
 }
 
 input, textarea {
+    outline: none;
     border-color: rgba($silver, 0.2);
     padding-left: .4rem;
     border-radius: 20px;
@@ -298,9 +300,20 @@ a {
         border-radius: 1rem;
         &-wrapper {
             width: fit-content;
-            margin: 0;
+            
         }
     }
+    &__btn {
+        border-radius: 1rem;
+        font-size: .9rem;
+        margin: auto .5rem 0 auto;
+        margin-bottom: 0;
+        &-wrapper {
+            width: fit-content;
+            margin: auto .5rem 0;
+        }
+    }
+
     &__label{
         font-size: 1.1rem;
         font-weight: bold;
@@ -329,8 +342,6 @@ a {
     @include desktop {
         margin-left: 10rem;
         margin-right: 10rem;
-        &__profile {
-        }
     }
 }
 
@@ -339,7 +350,7 @@ a {
     background-color: rgba(black, 0.6);
     position: absolute;
     width: 100vw;
-    height: 100%;
+    height: 600%;
     z-index: 2;
     left: 0;
     top: 139px;
@@ -400,3 +411,46 @@ a {
 
     }
 }
+
+#avatar-image-id {
+    width: 90px;
+    height: 90px;
+    object-fit: contain;
+}
+.user-list {
+    margin: auto 3%;
+    padding: 1rem .9rem;
+    border-radius: 5px;
+    box-shadow: 0 0 22px 2px rgba($paragraph_text, .3);
+    &__card {
+        box-shadow: 0 0 22px 2px rgba($paragraph_text, .3);
+        margin-bottom: 1rem;
+        padding: 1rem;
+        border-radius: $border_radius_std;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        &--btn {
+            margin: 0;
+
+            display: flex;margin-left: auto;
+            object-fit: contain;
+            width: 1.1rem;
+            height: 1.1rem;
+            align-self:flex-end;
+        }
+        &--row-1 {
+            display: flex;
+            flex-direction: column;
+            padding-left: .3rem;
+            &-a {
+                margin-top: .2rem;
+                margin-right: 2.5rem;
+                font-size: 1.5rem;
+                    text-align: right;
+            }
+        }
+    }
+}
+
