--- a/client/src/main.css
+++ b/client/src/main.css
@@ -16,6 +16,7 @@ body {
   min-height: 100vh;
   background: #7a5ebe !important;
   background: linear-gradient(5deg, #7a5ebe 26%, #bc5ead 57%, #d0b0e9 100%) !important;
+  padding-bottom: 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,7 +97,7 @@ textarea {
 
 a {
   text-decoration: none;
-  color: #FAFAFA;
+  color: #7a5ebe;
 }
 
 .header {
@@ -129,7 +130,7 @@ a {
 
 .header__btn {
   padding: 0 1rem;
-  margin: 0;
+  margin: 0 1rem .5rem 0;
   margin-right: 1rem;
   border-radius: 1.8rem;
   -webkit-box-shadow: none;
@@ -317,6 +318,10 @@ a {
   background-color: #f0ebfe;
 }
 
+.form__wrapper {
+  padding-bottom: 5rem;
+}
+
 .form__group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -328,9 +333,30 @@ a {
   margin: 1rem 0.5rem;
 }
 
+.form__group--large {
+  padding: 1rem;
+  border-radius: 1.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
+  -webkit-box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.1);
+          box-shadow: 0 0 22px 2px rgba(50, 50, 50, 0.1);
+}
+
 .form__label {
   margin: 0;
   padding: 0;
+  color: #FFFFFF;
+}
+
+.form__label--large {
+  width: 100%;
+  font-size: 1.5rem;
+  color: #FFFFFF;
 }
 
 .form__input {
