--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -48,7 +48,7 @@ body {
     min-height: 100vh;
     background: rgb(122,94,190) !important;
     background: linear-gradient(5deg, rgba(122,94,190,1) 26%, rgba(188,94,173,1) 57%, rgba(208,176,233,1) 100%) !important;
-
+    padding-bottom: 3rem;
     display: flex;
     flex-direction: column;
 
@@ -115,7 +115,7 @@ textarea {
 
 a {
     text-decoration: none;
-    color: $text_color;
+    color: $violet;
 
 }
 
@@ -138,7 +138,7 @@ a {
     }
     &__btn {
         padding: 0 1rem;
-        margin: 0;
+        margin: 0 1rem .5rem 0;
         margin-right: 1rem;
         border-radius: $border_radius_std;
         box-shadow: none;
@@ -264,17 +264,33 @@ a {
 
 
 .form {
-
+    &__wrapper {
+        padding-bottom: 5rem;
+    }
 
     &__group {
         display: flex;
         flex-direction: column;
         margin: 1rem 0.5rem;
+        &--large {
+            padding: 1rem;
+            border-radius: $border_radius_std;
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 2rem;
+            box-shadow: 0 0 22px 2px rgba($paragraph_text, .1);
+        }
     }
 
     &__label {
         margin: 0;
         padding: 0;
+        color: $white;
+        &--large {
+            width: 100%;
+            font-size: 1.5rem;
+            color: $white;
+        }
     }
     &__input {
         margin: 0;
